rgw: fix memory leaks during Swift Static Website's error handling.

Fixes: http://tracker.ceph.com/issues/20757
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>